--- a/HTML/introl.html
+++ b/HTML/introl.html
@@ -7,11 +7,38 @@
 
 <body>
     <h1>HTML Introl Lesson.</h1>
-    <p></p>
     <!-- This is p tag -->
+    <p></p>
+    <!-- This is p element -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aspernatur! Eaque excepturi saepe voluptates culpa eligendi minus, sequi quia nihil distinctio sed ipsa maxime, nobis ducimus tempore id ea nostrum.
     </p>
-    <!-- This is p element -->
+    <div></div>
+    <div>
+        <span>Hello</span>
+    </div>
+    <!-- Attribute -->
+    <p align="right">This is p element.</p>
+    <p align="center">This is second p element.</p>
+    <p align="left">This is third p element.</p>
+
+    <!-- Global Attribute -> class and id  -->
+    <p class="p-tag">Start Web Development with PHP(Bootstrap+Laravel)</p>
+    <p id="p-id">HeinLearn-Learn everywhere.</p>
+    <p class="p-tag" id="welcome" align="center">Welcome to my class.</p>
+
+    <h1>Case Insensitive</h1>
+    <p>Hello my classmates Welcome to my class.</p>
+    <div><span><p><h2>Pretty Important</h2></p></span></div>
+    <!-- Nested tags -->
+    <div>
+        <span>
+            <p>Nested tags</p>
+            <p>Pretty Important</p>
+            <span>
+                <h2>Hello</h2>
+            </span>
+        </span>
+    </div>
 
 </body>
 
