List Lesson & <a>tag in body.html

--- a/HTML/body.html
+++ b/HTML/body.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .block {
+            color: azure;
+            background-color: aquamarine;
+        }
+        
+        .inline {
+            color: blueviolet;
+            background-color: blanchedalmond;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,6 +36,61 @@
     <h4>You are CSS in my HTML.</h4>
     <h5>You are CSS in my HTML.</h5>
     <h6>You are CSS in my HTML.</h6>
+
+    <!-- Block Elements & Inline Element -->
+    <!-- Block Elements -->
+    <p class="block">Hello</p>
+    <p class="block">World!</p>
+
+    <!-- Inline Elements -->
+    <span class="inline">Hi</span>
+    <span class="inline">I am Myo.</span>
+
+    <!-- List -->
+    <!-- Order List -->
+    <h3>List</h3>
+    <!-- type="1,A,a,i" -->
+    <!-- start="number" -->
+    <!-- <ol type="I" start="5"> -->
+    <!-- <ol type="a" start="28"> -->
+    <div title='This is "Order List"!'>
+        <ol type="I" start="-5">
+            <li>ICS</li>
+            <li>Git and Github</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>CSS Project</li>
+            <li>JS</li>
+        </ol>
+    </div>
+    <div title='This is"Unorder List"!'>
+        <ul type="square">
+            <li>Apple</li>
+            <li>Meta</li>
+            <li>Microsoft</li>
+            <li>Google</li>
+        </ul>
+    </div>
+
+    <!-- Description List -->
+    <!-- <dt> (defines terms/names) and <dd> (describes each term/name). -->
+    <h3 title='This is "Defination List"!'>The dl, dd, and dt elements</h3>
+    <p>These three elements are used to create a description list:</p>
+    <dl>
+        <dt>Coffee</dt>
+        <dd>Black hot drink</dd>
+        <dt>Milk</dt>
+        <dd>White cold drink</dd>
+    </dl>
+
+    <a href="introl.html">Introl Lesson</a>
+    <a href="index.html">Index Lesson</a>
+    <a href="head.html">Head Lesson</a>
+    <a href="body.html">Body Lesson</a>
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="https://youtube.com">YouTube1</a>
+    <a href="https://youtube.com" target="_blank">YouTube2</a>
+
 
 </body>
 
