Assignment(HTML Layout-Link Folder)in HTML folder

--- a/HTML/body.html
+++ b/HTML/body.html
@@ -91,6 +91,11 @@
     <a href="https://youtube.com">YouTube1</a>
     <a href="https://youtube.com" target="_blank">YouTube2</a>
 
+    <img src="html-img1.jpeg" alt="">
+    <!-- <img src="https://eimaung.com/img/react.png" alt="React Book Cover"> -->
+    <!-- <img src="https://eimaung.com/img/laravel.png" alt="Laravel Book Cover"> -->
+    <!-- <img src="https://eimaung.com/img/api.jpg" alt="API Book Cover"> -->
+
 
 </body>
 
