Assignment(HTML Layout-Link_Folder)

--- a/HTML/link/index.html
+++ b/HTML/link/index.html
@@ -15,7 +15,7 @@
         <a href="">About</a>
     </nav>
     <header>
-        <h2>This is Home Page.</h2>
+        <h2>Welcome to My Study_Journey Home Page.</h2>
         <img src="images/home-img1.jfif" alt="" width="200" height="200">
     </header>
     <main>
