HTML_Layout Assignment(Correction)

--- a/HTML/link/index.html
+++ b/HTML/link/index.html
@@ -11,8 +11,8 @@
     <nav>
         <a href="index.html">Home</a> |
         <a href="pages/service.html">Service</a> |
-        <a href="">Contact</a> |
-        <a href="">About</a>
+        <a href="pages/contact.html">Contact</a> |
+        <a href="pages/about.html">About</a>
     </nav>
     <header>
         <h2>Welcome to My Study_Journey Home Page.</h2>
