--- a/HTML/body.html
+++ b/HTML/body.html
@@ -48,12 +48,12 @@
 
     <!-- List -->
     <!-- Order List -->
-    <h3>List</h3>
+    <h3 title="This is 'Order List and Unorder list'!">List</h3>
     <!-- type="1,A,a,i" -->
     <!-- start="number" -->
     <!-- <ol type="I" start="5"> -->
     <!-- <ol type="a" start="28"> -->
-    <div title='This is "Order List"!'>
+    <div>
         <ol type="I" start="-5">
             <li>ICS</li>
             <li>Git and Github</li>
@@ -63,7 +63,7 @@
             <li>JS</li>
         </ol>
     </div>
-    <div title='This is"Unorder List"!'>
+    <div>
         <ul type="square">
             <li>Apple</li>
             <li>Meta</li>
@@ -74,7 +74,7 @@
 
     <!-- Description List -->
     <!-- <dt> (defines terms/names) and <dd> (describes each term/name). -->
-    <h3 title='This is "Defination List"!'>The dl, dd, and dt elements</h3>
+    <h3 title="I'm a header">The dl, dd, and dt elements</h3>
     <p>These three elements are used to create a description list:</p>
     <dl>
         <dt>Coffee</dt>
