Tribute(HTML Project)U

--- a/Tribute(HTML Project)/index.html
+++ b/Tribute(HTML Project)/index.html
@@ -117,7 +117,7 @@
         </div><br>
         <div>
             <div>
-                <i>“The first of which is...life can be heavy,especially if you try to carry it all at once.Part of growing up and moving into new chapters of your life is about catch and release.What I mean by that is,knowing what things to keep,and what things to release.You can't carry all things, all grudges, all updates on your ex, all enviable promotions your school bully got at the hedge fund his uncle started.Decided what is yours to hold and let the rest go.Oftentimes the good ”</i>                ― Rosalind Franklin
+                <i>“The first of which is...life can be heavy,especially if you try to carry it all at once.Part of growing up and moving into new chapters of your life is about catch and release.What I mean by that is,knowing what things to keep,and what things to release.You can't carry all things, all grudges, all updates on your ex, all enviable promotions your school bully got at the hedge fund his uncle started.Decided what is yours to hold and let the rest go.Oftentimes the good things in your life are lighter anyway, so there's more room for them. One toxic relationship can outweigh so many wonderful, simple joys. You get to pick what your life has time and room for. Be discerning. ”</i>                ― Dr. Taylor Swift
             </div>
             <div id="bloom">
                 <h3>Bloom</h3>
