--- a/Tribute(HTML Project)/index.html
+++ b/Tribute(HTML Project)/index.html
@@ -226,23 +226,40 @@
 
             <div id="contact" align="center">
                 <h3>~ Keep in Touch ~</h3>
-                <label for="name">Name:</label>
-                <input type="text" name="" id="name">
-                <br><br>
-                <label for="email">Email:</label>
-                <input type="email" name="" id="email">
-                <br><br>
-                <!-- <p>Comment</p> -->
-                <label for="comment">Comment:</label>
-                <textarea name="" id="comment" cols="23" rows=""></textarea>
-                <br><br>
-                <button type="submit">SENT!</button>
-            </div>
+                <table>
+                    <tr>
+                        <td>
+                            <label for="name">Name:</label>
+                        </td>
+                        <td>
+                            <input type="text" name="user_name" id="name">
+                        </td>
 
-            <!-- <h3 id="know-more">Want to know more about Rosalid Franklin? Then check <a href="https://www.youtube.com/watch?v=MfHM-kuoing" target="_blank" id="tribute-link">this animation!</a></h3> -->
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="email">Email:</label>
+                        </td>
+                        <td>
+                            <input type="email" name="user_email" id="email">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="comment">Comment:</label>
+                        </td>
+                        <td>
+                            <textarea name="user_comment" id="comment" rows="5" cols="20"></textarea>
+                        </td>
+                    </tr>
+                </table>
+                <form action="" method="post">
+                    <button type="submit">Send!</button>
+                </form>
+                <hr>
+            </div>
         </div>
     </main>
-    <hr>
     <footer align="center">
         <p>2025 © All Rights Reserved By MSMA &#127803;</p>
     </footer>
