--- a/PDA/lounge/contact.html
+++ b/PDA/lounge/contact.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="sub-cover cover-contact">
-        <header class="page-header wrapper">
+        <header class="page-header wrapper" id="nav">
             <h1 class="align-center">
                 <a href="index.html"><img class="logo" src="../images/pdabarlogo.png" alt=""></a>
             </h1>
@@ -149,8 +149,8 @@
             </div>
 
             <div class="location-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.447256421792!2d139.73430457624426!3d35.6659877308104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b835ec8b0af%3A0x9b0355e3df3a9ebc!2z5YWt5pys5pyoROOCueOCr-OCqOOCog!5e0!3m2!1sen!2sjp!4v1688540719182!5m2!1sen!2sjp"
-                    width="720" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d107261.95665507052!2d130.9497852825599!3d32.846942324462596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540deaed0c0ef05%3A0xbc68c3f717fa8c34!2sMinamiaso%2C%20Aso%20District%2C%20Kumamoto!5e0!3m2!1sen!2sjp!4v1740977285714!5m2!1sen!2sjp"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
@@ -191,7 +191,7 @@
         </section>
 
         <div class="copyright">
-            <a href="index.html"><img class="footerlogo" src="../images/pdabarlogo.png" alt="DTA-HomePage"></a>
+            <a href="" id="#nav"><img class="footerlogo" src="../images/pdabarlogo.png" alt="DTA-HomePage"></a>
             <small>&copy; 2025 PLEASE DON'T ASK - BAR LOUNGE By MSMA</small>
         </div>
     </footer>
