--- a/PDA/lounge/index.html
+++ b/PDA/lounge/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="cover cover-home">
-        <header class="page-header wrapper">
+        <header class="page-header wrapper" id="nav">
             <h1 class="align-center">
                 <a href="index.html"><img class="logo" src="../images/pdabarlogo.png" alt="DTA-HomePage"></a>
             </h1>
@@ -149,8 +149,8 @@
             </tr>
         </table>
         <div class="copyright ">
-            <a href="index.html "><img class="footerlogo " src="../images/pdabarlogo.png " alt="DTA-HomePage "></a>
-            <small>&copy; 2025 PLEASE DON'T ASK - BAR LOUNGE By MSMA</small>
+            <a href="index.html " id="#nav"><img class="footerlogo " src="../images/pdabarlogo.png " alt="DTA-HomePage "></a>
+            <small>&copy; 2025 PLEASE DON'T ASK - BAR LOUNGE By MSMA </small>
         </div>
     </footer>
 
