--- a/PDA/lounge/order.html
+++ b/PDA/lounge/order.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="cover cover-home" id="cover-home">
-        <header class="page-header wrapper">
+        <header class="page-header wrapper" id="nav">
             <h1 class="align-center">
                 <a href="index.html"><img class="logo" src="../images/pdabarlogo.png" alt="DTA-HomePage"></a>
             </h1>
@@ -86,7 +86,7 @@
 
         </section>
         <div class="copyright ">
-            <a href="index.html "><img class="footerlogo " src="../images/pdabarlogo.png " alt="DTA-HomePage "></a>
+            <a href="" id="#nav"><img class="footerlogo " src="../images/pdabarlogo.png " alt="DTA-HomePage "></a>
             <small>&copy; 2025 PLEASE DON'T ASK - BAR LOUNGE By MSMA</small>
         </div>
     </footer>
