--- a/PDA/lounge/stay.html
+++ b/PDA/lounge/stay.html
@@ -94,7 +94,7 @@
     </main>
 
     <footer class="page-footer">
-        <h3 class="heading-large font">Information</h3>
+        <!-- <h3 class="heading-large font">Information</h3>
         <table class="info">
             <tr>
                 <th>Address</th>
@@ -112,7 +112,7 @@
                 <th>Holiday</th>
                 <th>Monday</th>
             </tr>
-        </table>
+        </table> -->
         <div class="copyright">
             <a href="" id="#nav"><img class="footerlogo" src="../images/pdabarlogo.png" alt="DTA-HomePage"></a>
             <small>&copy; 2025 PLEASE DON'T ASK - BAR LOUNGE By MSMA</small>
